--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -4,16 +4,64 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import trashsoftware.trashSnooker.fxml.widgets.GamePane?>
-<Pane xmlns="http://javafx.com/javafx"
+<?import javafx.geometry.Insets?>
+<AnchorPane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.GameView">
 
+    <MenuBar AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+        <Menu text="%window">
+            <MenuItem text="%close" onAction="#closeWindowAction"/>
+        </Menu>
+        <Menu fx:id="gameMenu" text="%gameMenu">
+            <MenuItem text="%withdraw" onAction="#withdrawAction" fx:id="withdrawMenu"
+                      disable="true"/>
+            <MenuItem text="%replaceBallInHand" onAction="#replaceBallInHandAction"
+                      fx:id="replaceBallInHandMenu" disable="true"/>
+            <MenuItem text="%letOpponentPlay" onAction="#letOtherPlayAction"
+                      fx:id="letOtherPlayMenu"
+                      disable="true"/>
+            <MenuItem fx:id="repositionMenu" text="%reposition" onAction="#repositionAction"
+                      disable="true"/>
+            <MenuItem fx:id="pushOutMenu" text="%pushOut" disable="true"
+                      onAction="#pushOutAction"/>
+        </Menu>
+        <Menu text="%playMenu">
+            <CheckMenuItem fx:id="aiAutoPlayMenuItem" text="%aiAutoPlay"/>
+            <SeparatorMenuItem/>
+            <CheckMenuItem fx:id="drawAiPathItem" text="%drawPredictionLineAi"/>
+            <!--                <CheckMenuItem fx:id="predictPlayerPathItem" text="%drawPredictionLinePlayer"/>-->
+            <SeparatorMenuItem/>
+            <fx:define>
+                <ToggleGroup fx:id="animationPlaySpeedToggle"/>
+            </fx:define>
+            <RadioMenuItem text="0.125x" toggleGroup="$animationPlaySpeedToggle"
+                           userData="0.125"/>
+            <RadioMenuItem text="0.25x" toggleGroup="$animationPlaySpeedToggle"
+                           userData="0.25"/>
+            <RadioMenuItem text="0.5x" toggleGroup="$animationPlaySpeedToggle" userData="0.5"/>
+            <RadioMenuItem text="1x" toggleGroup="$animationPlaySpeedToggle" userData="1"/>
+            <RadioMenuItem text="2x" toggleGroup="$animationPlaySpeedToggle" userData="2"/>
+            <RadioMenuItem text="4x" toggleGroup="$animationPlaySpeedToggle" userData="4"/>
+            <RadioMenuItem text="8x" toggleGroup="$animationPlaySpeedToggle" userData="8"/>
+        </Menu>
+        <Menu fx:id="debugMenu" text="Debug">
+            <MenuItem text="terminate" onAction="#terminateAction"/>
+            <MenuItem fx:id="debugModeMenu" text="debug mode" onAction="#debugModeAction"/>
+            <MenuItem text="test" onAction="#testAction"/>
+            <MenuItem text="tie" onAction="#tieTestAction"/>
+            <MenuItem text="clear red balls" onAction="#clearRedBallsAction"/>
+            <MenuItem text="p1+10" onAction="#p1AddScoreAction"/>
+            <MenuItem text="p2+10" onAction="#p2AddScoreAction"/>
+        </Menu>
+    </MenuBar>
+
     <GridPane
-            vgap="2.0" hgap="20.0">
+            AnchorPane.topAnchor="30.0"
+            vgap="2.0" hgap="20.0" style="-fx-background: whitesmoke">
 
         <columnConstraints>
             <ColumnConstraints halignment="CENTER"/>
-            <ColumnConstraints/>
             <ColumnConstraints/>
         </columnConstraints>
 
@@ -23,51 +71,10 @@
             <RowConstraints/>
             <RowConstraints/>
         </rowConstraints>
-
-        <MenuBar GridPane.columnSpan="2">
-            <Menu fx:id="gameMenu" text="%gameMenu">
-                <!--                <MenuItem fx:id="saveGameMenu" text="保存" onAction="#saveGameAction"/>-->
-                <MenuItem text="%withdraw" onAction="#withdrawAction" fx:id="withdrawMenu"
-                          disable="true"/>
-                <MenuItem text="%replaceBallInHand" onAction="#replaceBallInHandAction"
-                          fx:id="replaceBallInHandMenu" disable="true"/>
-                <MenuItem text="%letOpponentPlay" onAction="#letOtherPlayAction"
-                          fx:id="letOtherPlayMenu"
-                          disable="true"/>
-                <MenuItem fx:id="repositionMenu" text="%reposition" onAction="#repositionAction"
-                          disable="true"/>
-                <MenuItem fx:id="pushOutMenu" text="%pushOut" disable="true"
-                          onAction="#pushOutAction"/>
-            </Menu>
-            <Menu text="%playMenu">
-                <CheckMenuItem fx:id="aiAutoPlayMenuItem" text="%aiAutoPlay"/>
-                <SeparatorMenuItem/>
-                <CheckMenuItem fx:id="drawAiPathItem" text="%drawPredictionLineAi"/>
-                <!--                <CheckMenuItem fx:id="predictPlayerPathItem" text="%drawPredictionLinePlayer"/>-->
-                <SeparatorMenuItem/>
-                <fx:define>
-                    <ToggleGroup fx:id="animationPlaySpeedToggle"/>
-                </fx:define>
-                <RadioMenuItem text="0.125x" toggleGroup="$animationPlaySpeedToggle"
-                               userData="0.125"/>
-                <RadioMenuItem text="0.25x" toggleGroup="$animationPlaySpeedToggle"
-                               userData="0.25"/>
-                <RadioMenuItem text="0.5x" toggleGroup="$animationPlaySpeedToggle" userData="0.5"/>
-                <RadioMenuItem text="1x" toggleGroup="$animationPlaySpeedToggle" userData="1"/>
-                <RadioMenuItem text="2x" toggleGroup="$animationPlaySpeedToggle" userData="2"/>
-                <RadioMenuItem text="4x" toggleGroup="$animationPlaySpeedToggle" userData="4"/>
-                <RadioMenuItem text="8x" toggleGroup="$animationPlaySpeedToggle" userData="8"/>
-            </Menu>
-            <Menu fx:id="debugMenu" text="Debug">
-                <MenuItem text="terminate" onAction="#terminateAction"/>
-                <MenuItem fx:id="debugModeMenu" text="debug mode" onAction="#debugModeAction"/>
-                <MenuItem text="test" onAction="#testAction"/>
-                <MenuItem text="tie" onAction="#tieTestAction"/>
-                <MenuItem text="clear red balls" onAction="#clearRedBallsAction"/>
-                <MenuItem text="p1+10" onAction="#p1AddScoreAction"/>
-                <MenuItem text="p2+10" onAction="#p2AddScoreAction"/>
-            </Menu>
-        </MenuBar>
+        
+        <padding>
+            <Insets topRightBottomLeft="5.0"/>
+        </padding>
 
         <Canvas fx:id="cueAngleCanvas" GridPane.rowIndex="1" width="80.0" height="80.0"/>
         <Label fx:id="cueAngleLabel" GridPane.rowIndex="2" text="5°"/>
@@ -149,5 +156,5 @@
         </VBox>
 
     </GridPane>
-</Pane>
+</AnchorPane>
 
