--- a/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
@@ -30,8 +30,9 @@
             <Label fx:id="levelExpLabel"/>
             <Button text="%levelUp" fx:id="levelUpBtn" onAction="#levelUpAction" visible="false"/>
         </HBox>
-        <HBox>
+        <HBox spacing="10.0">
             <Label fx:id="moneyLabel"/>
+            <Label fx:id="achievementsLabel" text="%achievements" onMouseClicked="#achievementsAction"/>
         </HBox>
         <AbilityShower fx:id="abilityShower"/>
         <HBox spacing="20.0" alignment="CENTER">
