--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import trashsoftware.trashSnooker.fxml.widgets.GamePane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
+<VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="trashsoftware.trashSnooker.fxml.GameView">
 
-    <MenuBar AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+    <MenuBar>
         <Menu text="%window">
             <MenuItem text="%close" onAction="#closeWindowAction"/>
         </Menu>
@@ -76,106 +76,108 @@
             <MenuItem text="p2+10" onAction="#p2AddScoreAction"/>
         </Menu>
     </MenuBar>
+    
+    <AnchorPane fx:id="contentPane">
+        <GridPane vgap="2.0" hgap="20.0" style="-fx-background: whitesmoke">
 
-    <GridPane
-            AnchorPane.topAnchor="30.0"
-            vgap="2.0" hgap="20.0" style="-fx-background: whitesmoke">
+            <columnConstraints>
+                <ColumnConstraints halignment="CENTER"/>
+                <ColumnConstraints/>
+            </columnConstraints>
 
-        <columnConstraints>
-            <ColumnConstraints halignment="CENTER"/>
-            <ColumnConstraints/>
-        </columnConstraints>
+            <rowConstraints>
+                <RowConstraints/>
+                <RowConstraints/>
+                <RowConstraints/>
+                <RowConstraints/>
+            </rowConstraints>
 
-        <rowConstraints>
-            <RowConstraints/>
-            <RowConstraints/>
-            <RowConstraints/>
-            <RowConstraints/>
-        </rowConstraints>
+            <padding>
+                <Insets topRightBottomLeft="5.0"/>
+            </padding>
 
-        <padding>
-            <Insets topRightBottomLeft="5.0"/>
-        </padding>
+            <Canvas fx:id="cueAngleCanvas" GridPane.rowIndex="1" width="80.0" height="80.0"/>
+            <Label fx:id="cueAngleLabel" GridPane.rowIndex="2" text="5°"/>
 
-        <Canvas fx:id="cueAngleCanvas" GridPane.rowIndex="1" width="80.0" height="80.0"/>
-        <Label fx:id="cueAngleLabel" GridPane.rowIndex="2" text="5°"/>
+            <Canvas fx:id="cuePointCanvas" GridPane.rowIndex="3" width="80.0" height="80.0"/>
 
-        <Canvas fx:id="cuePointCanvas" GridPane.rowIndex="3" width="80.0" height="80.0"/>
-
-        <VBox alignment="TOP_CENTER" GridPane.rowIndex="4" spacing="10.0">
-            <Slider fx:id="powerSlider" prefHeight="320.0" orientation="VERTICAL"/>
-            <Label fx:id="powerLabel"/>
-            <VBox fx:id="gameButtonBox" alignment="CENTER">
-                <Button fx:id="cueButton" text="%cueText" onAction="#cueAction"/>
+            <VBox alignment="TOP_CENTER" GridPane.rowIndex="4" spacing="10.0">
+                <Slider fx:id="powerSlider" prefHeight="320.0" orientation="VERTICAL"/>
+                <Label fx:id="powerLabel"/>
+                <VBox fx:id="gameButtonBox" alignment="CENTER">
+                    <Button fx:id="cueButton" text="%cueText" onAction="#cueAction"/>
+                </VBox>
+                <VBox fx:id="handSelectionBox" spacing="10.0" alignment="CENTER">
+                    <fx:define>
+                        <ToggleGroup fx:id="handSelectionToggleGroup"/>
+                    </fx:define>
+                    <RadioButton fx:id="handSelectionLeft" text="%leftHand"
+                                 toggleGroup="$handSelectionToggleGroup" userData="LEFT"/>
+                    <RadioButton fx:id="handSelectionRight" text="%rightHand"
+                                 toggleGroup="$handSelectionToggleGroup" userData="RIGHT"/>
+                    <RadioButton fx:id="handSelectionRest" text="%restHand"
+                                 toggleGroup="$handSelectionToggleGroup" userData="REST"/>
+                </VBox>
+                <VBox fx:id="replayButtonBox" spacing="10.0" alignment="CENTER">
+                    <Button fx:id="replayLastCueButton" text="%replayLastCue"
+                            onAction="#replayLastCueAction"/>
+                    <Button fx:id="replayNextCueButton" text="%replayNextCue"
+                            onAction="#replayNextCueAction"/>
+                    <Label fx:id="replayCueNumLabel"/>
+                    <!--                <Button text="%replayFastForward" onAction="#replayFastForwardAction"/>-->
+                    <CheckBox fx:id="replayAutoPlayBox" text="%replayAutoPlay"/>
+                </VBox>
             </VBox>
-            <VBox fx:id="handSelectionBox" spacing="10.0" alignment="CENTER">
-                <fx:define>
-                    <ToggleGroup fx:id="handSelectionToggleGroup"/>
-                </fx:define>
-                <RadioButton fx:id="handSelectionLeft" text="%leftHand"
-                             toggleGroup="$handSelectionToggleGroup" userData="LEFT"/>
-                <RadioButton fx:id="handSelectionRight" text="%rightHand"
-                             toggleGroup="$handSelectionToggleGroup" userData="RIGHT"/>
-                <RadioButton fx:id="handSelectionRest" text="%restHand"
-                             toggleGroup="$handSelectionToggleGroup" userData="REST"/>
+
+            <VBox GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.rowSpan="4">
+                <GamePane fx:id="gamePane"/>
+
+                <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" percentWidth="30.0"/>
+                        <ColumnConstraints halignment="CENTER" percentWidth="40.0"/>
+                        <ColumnConstraints halignment="RIGHT" percentWidth="30.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                    </rowConstraints>
+
+                    <HBox alignment="CENTER_LEFT" spacing="20.0">
+                        <Label fx:id="player1Label" text="Player 1"/>
+                        <Label fx:id="player1ScoreLabel" text="0"/>
+                        <Canvas fx:id="player1TarCanvas"/>
+                    </HBox>
+                    <HBox GridPane.columnIndex="1" alignment="CENTER" spacing="5.0">
+                        <Label fx:id="player1FramesLabel" text="0"/>
+                        <Label fx:id="totalFramesLabel" text="(9)"/>
+                        <Label fx:id="player2FramesLabel" text="0"/>
+                    </HBox>
+                    <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1"
+                          GridPane.rowIndex="1">
+                        <Label fx:id="singlePoleLabel" text="0"/>
+                        <Canvas fx:id="singlePoleCanvas"/>
+                    </HBox>
+                    <HBox alignment="CENTER_RIGHT" spacing="20.0" GridPane.columnIndex="2">
+                        <Canvas fx:id="player2TarCanvas"/>
+                        <Label fx:id="player2ScoreLabel" text="0"/>
+                        <Label fx:id="player2Label" text="Player 2"/>
+                    </HBox>
+                    <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="0"
+                          GridPane.rowIndex="1">
+                        <Label fx:id="snookerScoreDiffLabel"/>
+                        <Label fx:id="snookerScoreRemainingLabel"/>
+                    </HBox>
+                    <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="2"
+                          GridPane.rowIndex="1">
+                        <Label text="FPS"/>
+                        <Label fx:id="fpsLabel" text="0"/>
+                    </HBox>
+                </GridPane>
             </VBox>
-            <VBox fx:id="replayButtonBox" spacing="10.0" alignment="CENTER">
-                <Button fx:id="replayLastCueButton" text="%replayLastCue"
-                        onAction="#replayLastCueAction"/>
-                <Button fx:id="replayNextCueButton" text="%replayNextCue"
-                        onAction="#replayNextCueAction"/>
-                <!--                <Button text="%replayFastForward" onAction="#replayFastForwardAction"/>-->
-                <CheckBox fx:id="replayAutoPlayBox" text="%replayAutoPlay"/>
-            </VBox>
-        </VBox>
 
-        <VBox GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.rowSpan="4">
-            <GamePane fx:id="gamePane"/>
-
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints halignment="LEFT" percentWidth="30.0"/>
-                    <ColumnConstraints halignment="CENTER" percentWidth="40.0"/>
-                    <ColumnConstraints halignment="RIGHT" percentWidth="30.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints/>
-                    <RowConstraints/>
-                </rowConstraints>
-
-                <HBox alignment="CENTER_LEFT" spacing="20.0">
-                    <Label fx:id="player1Label" text="Player 1"/>
-                    <Label fx:id="player1ScoreLabel" text="0"/>
-                    <Canvas fx:id="player1TarCanvas"/>
-                </HBox>
-                <HBox GridPane.columnIndex="1" alignment="CENTER" spacing="5.0">
-                    <Label fx:id="player1FramesLabel" text="0"/>
-                    <Label fx:id="totalFramesLabel" text="(9)"/>
-                    <Label fx:id="player2FramesLabel" text="0"/>
-                </HBox>
-                <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1"
-                      GridPane.rowIndex="1">
-                    <Label fx:id="singlePoleLabel" text="0"/>
-                    <Canvas fx:id="singlePoleCanvas"/>
-                </HBox>
-                <HBox alignment="CENTER_RIGHT" spacing="20.0" GridPane.columnIndex="2">
-                    <Canvas fx:id="player2TarCanvas"/>
-                    <Label fx:id="player2ScoreLabel" text="0"/>
-                    <Label fx:id="player2Label" text="Player 2"/>
-                </HBox>
-                <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="0"
-                      GridPane.rowIndex="1">
-                    <Label fx:id="snookerScoreDiffLabel"/>
-                    <Label fx:id="snookerScoreRemainingLabel"/>
-                </HBox>
-                <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="2"
-                      GridPane.rowIndex="1">
-                    <Label text="FPS"/>
-                    <Label fx:id="fpsLabel" text="0"/>
-                </HBox>
-            </GridPane>
-        </VBox>
-
-    </GridPane>
-</AnchorPane>
+        </GridPane>
+    </AnchorPane>
+    
+</VBox>
 
