--- a/src/main/resources/trashsoftware/trashSnooker/fxml/champDrawView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/champDrawView.fxml
@@ -10,6 +10,11 @@
 <?import trashsoftware.trashSnooker.fxml.widgets.LabelTable?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.ChampDrawView"
@@ -27,9 +32,15 @@
         <Label fx:id="champNameLabel"/>
 <!--        <CheckBox fx:id="showAllMatchesBox" text="%showAllMatches" selected="true"/>-->
         <ComboBox fx:id="treeShowingBox"/>
+        <HBox spacing="5.0">
+            <Button fx:id="zoomInBtn" onAction="#zoomInAction" text="+" prefWidth="28.0"/>
+            <Button fx:id="zoomOutBtn" onAction="#zoomOutAction" text="-" prefWidth="28.0"/>
+        </HBox>
     </HBox>
-
-    <ScrollPane prefHeight="540.0" prefWidth="1060.0" style="-fx-padding: 0;">
+    
+    <ScrollPane fx:id="scrollPane" prefHeight="540.0" prefWidth="1060.0" 
+                GridPane.columnSpan="2" GridPane.rowSpan="2"
+                style="-fx-padding: 0;">
         <Canvas fx:id="treeCanvas"/>
     </ScrollPane>
 
