--- a/src/main/resources/trashsoftware/trashSnooker/fxml/settingsView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/settingsView.fxml
@@ -54,7 +54,7 @@
         <ComboBox fx:id="resolutionComboBox" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
 
         <Label text="%systemZoom" GridPane.rowIndex="8" visible="false" managed="false"/>
-        <ComboBox fx:id="systemZoomComboBox" GridPane.rowIndex="8" GridPane.columnIndex="1" 
+        <ComboBox fx:id="systemZoomComboBox" GridPane.rowIndex="8" GridPane.columnIndex="1"
                   visible="false" managed="false"/>
 
         <Label text="%antiAliasing" GridPane.rowIndex="9"/>
@@ -64,8 +64,10 @@
         <ComboBox fx:id="performanceBox" GridPane.rowIndex="10" GridPane.columnIndex="1"/>
 
         <Label text="%frameRate" GridPane.rowIndex="11" visible="false" managed="false"/>
+        <Label text="%productionFrameRate" GridPane.rowIndex="11"/>
         <ComboBox fx:id="frameRateBox" GridPane.rowIndex="11" GridPane.columnIndex="1"
                   visible="false" managed="false"/>
+        <ComboBox fx:id="prodFrameRateBox" GridPane.rowIndex="11" GridPane.columnIndex="1"/>
 
         <Label text="%settingsGeneral" GridPane.rowIndex="13">
             <font>
