--- a/src/main/resources/trashsoftware/trashSnooker/fxml/entryView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/entryView.fxml
@@ -14,6 +14,8 @@
             <MenuItem text="%recordMenu" onAction="#recordsAction"/>
             <MenuItem text="%replayMenu" onAction="#replayAction"/>
             <SeparatorMenuItem/>
+            <MenuItem text="%cuePreviewer" onAction="#cuePreviewerAction"/>
+            <SeparatorMenuItem/>
             <MenuItem text="%settingsMenu" onAction="#settingsAction"/>
         </Menu>
         <Menu text="%helpMenu">
